# Ollama-PDFbot

./: .env.example  .gitignore  README.md  pyproject.toml
data/output/: index.json  report.json
src/: __init__.py  config.py  file_organizer.py  llm_pipeline.py  main.py  pdf_extractor.py  streamlit_app.py
tests/: test_file_organizer.py  test_llm_pipeline.py  test_pdf_extractor.py
